Several UI bug fixes (#118)
Scrollbar no longer disappears when the bookmark is opened in the chapter select screen
The bookmark's width has been fixed
Changed the colors a bit on the pages
Fixed bookmark positioning (although it is still flawed on certain screen sizes)
Changed size of definition in quiz screen (so that it does not clip into the words as much)
Decreased the volume of the audio clips
Added a rainbow pattern for 100% completion of a chapter

--- a/root/frontend/public/css/chapter-select-styles.css
+++ b/root/frontend/public/css/chapter-select-styles.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: overlay;
+}
+
 /* Heading */
 #home-heading {
   position: absolute;
@@ -53,7 +57,7 @@
   display: block;
   z-index: -10;
   transform: translate(48%, -100%) scale(20%, 96%);
-  background-color: rgb(230, 29, 29);
+  background-color: #fc0b03;
   transition: background-color 0.5s, transform 0.5s;
 }
 
@@ -73,6 +77,7 @@
   position: relative;
   left: 30%;
   transform: scale(350%, 100%);
+  color: #5c5c5c;
 }
 
 /* Chapter select button effects */
@@ -104,7 +109,7 @@
   top: -10%;
   transform: scale(0);
   transition: 100ms ease-in-out;
-  color: rgb(255, 196, 0);
+  color: rgb(255, 103, 15);
 }
 
 /* When hovering over the progress bar the number will be displayed */
@@ -122,12 +127,21 @@
 /* The amount of progress displayed in the progress bar. */
 .progress {
   border: none;
-  background-color: rgba(224,255,0,1);
+  background-color: rgb(73, 255, 49);
 }
 
 /* At 100% completion change to "gold" */
 .chapter-box .percent100 {
-  color: yellow;
+  background-image: linear-gradient(to right, red, orange, yellow, rgb(51, 255, 51), rgb(0, 204, 255), rgb(255, 4, 188));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: move 1000s linear infinite;
+}
+
+@keyframes move {
+  to {
+    background-position: 4500vh;
+  }
 }
 
 /* At 0% completion change to black */
